[metadata]
name = plover_halkomelem
version = 0.0.1
description = Halkomelem system for Plover
#long_description = file: README.md
author = Alexander Nguyen
author_email = alexandernguyen41@gmail.com
license = Creative Commons Attribution 4.0 International
#url = https://github.com/Willem3141/plover_dutch
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
	plover>=4.0.0.dev0
py_modules =
	plover_halkomelem

[options.entry_points]
plover.system =
  Halkomelem Stenotype = plover_halkomelem